Integrated React-DataGrid Removed redundant codes

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <title>Order Application</title>
   <link rel="stylesheet" href="/app.css"/>
+  <link rel="stylesheet" href="/datagrid.css"/>
 </head>
 <body>
 <div id="app">{{html|safe}}</div>
